style: 報價調整報價inputNumber-scss

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -18,10 +18,9 @@ p-card {
     width: 100%;
     border-radius: 6px;
   }
-  .p-inputnumber {
-    width: 100%;
+  .p-inputnumber{
+    width: 100%!important;
     border-radius: 6px;
-    // display: none;
   }
   .p-password,
   .p-dropdown {
