--- a/src/app/views/features/campaign/campaign.component.html
+++ b/src/app/views/features/campaign/campaign.component.html
@@ -51,7 +51,7 @@
   </div>
 </div>
 <form [formGroup]="campaign_form">
-  <p-dialog [(visible)]="visible" header={{dialogHeader}}>
+  <p-dialog [(visible)]="visible" header={{dialogHeader}} [modal]="true">
     <div class="grid">
       <div class="col-6">
         <div class="field">
