feat: 契約頁面增加表格查詢

--- a/src/app/views/features/contract/contract.component.html
+++ b/src/app/views/features/contract/contract.component.html
@@ -7,7 +7,15 @@
           <p-button icon="pi pi-plus" (click)="showDialog('add')" styleClass="p-button-text"></p-button>
         </span>
       </div>
-      <p-table [value]="contract">
+      <p-table [rowsPerPageOptions]="[5, 10, 15]" [value]="filteredContracts" [paginator]="true" [rows]="5" [totalRecords]="100" [currentPageReportTemplate]="'Showing {first} to {last} of {totalRecords} entries'">
+        <ng-template pTemplate="caption">
+          <div class="flex">
+            <span class="p-input-icon-left ml-auto">
+              <td><input type="text" [(ngModel)]="filterText" (input)="filtercontracts()" pInputText
+                  placeholder="輸入關鍵字"></td>
+            </span>
+          </div>
+        </ng-template>
         <ng-template pTemplate="header">
           <tr>
             <th pSortableColumn="number">號碼
